# CampaRi

./: .RData  .Rbuildignore  .Rhistory  .codecov.yml  .gitignore  .gitlab-ci.yml  .travis.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CampaRi.Rproj  DESCRIPTION  ISSUE_TEMPLATE.md  MST_DUMPLING.nc  Makefile  NAMESPACE  README.md  a.out  campackage.Rproj  cleanup  cleanup.backup  codecov.yml  configure  configure.ac  copy_source_campariautoconf.sh
.Rproj.user/1E24504B/: persistent-state
.Rproj.user/1E24504B/pcs/: files-pane.pper
R/: #basins_recognition.R#  adjl_from_adjmat.R  adjl_from_progindex.R  asadadadsf.R  basin_optimization.R  basins_recognition.R  campari_run.R  contract_mst.R  feature_selection.R  find_mahalanobis.R  gen_annotation.R  gen_progindex.R  generate_covariance.R  generate_network.R  gmrq_kfold.R  install_campari.R  keywords_from_keyfile.R  loader.R  misc.R  msm.R  mst.R  mst_from_trj.R  multiplicate_trj.R  nSBR.R  plot_traces.R  plot_zapphire.R  run_campari.R  score_sapphire.R  show_clustering_summary.R  test_adjl_from_progindex.R  torsionate.R  write_pdb.R
data/: nbu.key
inst/: CITATION
inst/campari_lib/: Makefile  TODO  a.out
inst/campari_lib/CVS/: Entries
inst/campari_lib/doc/: changelog.txt  contact.html  development.html  documentation.html  download.html  index.html  inputfiles.html  install.html  keywords.html  outputfiles.html  parameters.html  references.html  style_red.css  tutorial1.html  tutorial10.html  tutorial11.html  tutorial12.html  tutorial13.html  tutorial2.html  tutorial3.html  tutorial4.html  tutorial5.html  tutorial6.html  tutorial7.html  tutorial8.html  tutorial9.html  tutorials.html  typeglobals_html.py
inst/campari_lib/params/: GROM53a5.prm  GROM53a6.prm  abs3.1_GR53a5.prm  abs3.1_GR53a6.prm  abs3.1_a03.prm  abs3.1_a94.prm  abs3.1_a99.prm  abs3.1_charmm.prm  abs3.1_charmm36.prm  abs3.1_opls.prm  abs3.2_GR53a5.prm  abs3.2_GR53a6.prm  abs3.2_a03.prm  abs3.2_a94.prm  abs3.2_a99.prm  abs3.2_charmm.prm  abs3.2_charmm36.prm  abs3.2_opls.prm  abs3.3_charmm36.prm  amber03.prm  amber94.prm  amber99.prm  bondedlst.prm  charmm.prm  charmm36.prm  fmsmc.prm  fmsmc_exp.prm  fmsmc_exp2.prm  fmsmc_exp3.prm  oplsaal.prm  template.prm
inst/campari_lib/source/: 2conftest.f90  DEPENDENCIES  Makefile.backup  Makefile.in  a.out  accsim.f90  allocate.f90  assignprm.f90  atoms.mod  backup.f90  boundary.f90  cartld.f90  cartmd.f90  chainsaw.f90  clustering.f90  clustering_utils.f90  configure  configure.ac  conrot.f90  constraint_solvers.f90  del_me  delete_me  dssp.f90  emicroscopy.f90  energy.f90  energy_wrap.f90  ensemble.f90  ewald.f90  flow.f90  fmcscgrid.f90  fmsmcmpi.f90  force.f90  force_wrap.f90  fyczmat.f90  getkey.f90  graph_algorithms.f90  holes.f90  initial.f90  inner_loops.f90  inner_loops_en.f90  (+93 more)
inst/campari_lib/tools/: box2conc.m  paulingo.cpp  rersnmb.sh  sigmainterpol.m  volapprox.m
inst/extdata/: NBU.fyc  NBU_1250fs.dcd  nbu.key
inst/extdata/debugging_tools/: to_del_alternative_gutenberg.f90  to_del_alternative_utilities.f90  to_del_ar.f90  to_del_ar_runner.sh  to_del_gl.f90  to_del_glob_runner.sh  to_del_lapack_eig.f90  to_delexe
inst/extdata/deprecated/: generate_covariance.R  torsionate.R
inst/extdata/for_campari/: CHANGELOG  TODO  xdr_basic.tar.bz2
inst/extdata/src_netcdf/: Makevars  setting_up_netcdf.R
inst/for_campari/doc/: documentation.html  index_beta.html  tutorial2.html  tutorial5.html
inst/for_campari/params/: abs3.1_a94.prm  abs3.1_a99.prm  abs3.2_GR53a5.prm  abs3.2_opls.prm  amber94.prm
inst/for_campari/source/: .#readpdb.f90.1.69  allocate.f90  cartmd.f90  dssp.f90  emicroscopy.f90  fmcscgrid.f90  holes.f90  inner_loops_imp.f90  minimize.f90  mod_clusters.f90  mod_contacts.f90  mod_dssps.f90  mod_ems.f90  mod_grandensembles.f90  mod_grids.f90  mod_iounit.f90  mod_pdb.f90  sav.f90  (+9 more)
man/: adjl_from_adjmat.Rd  adjl_from_pi.Rd  adjl_from_progindex.Rd  adjl_from_trj.Rd  basin_optimization.Rd  basins_recognition.Rd  campari.Rd  contract_mst.Rd  find_mahalanobis.Rd  gen_annotation.Rd  gen_progindex.Rd  generate_covariance.Rd  generate_network.Rd  gmrq.kfold.Rd  install_campari.Rd  keywords_from_keyfile.Rd  load_trj_dcd.Rd  msm.Rd  mst_from_trj.Rd  multiplicate_trj.Rd  nSBR.Rd  plot_traces.Rd  run_campari.Rd  sapphire_plot.Rd  score_sapphire.Rd  select_features.Rd  show_clustering_summary.Rd  write.pdb.d.Rd  write_pdb.Rd  zap_ggplot.Rd
man/.Rd2pdf21998/: Rd2.tex
src/: 2m_clustering.f90  CampaRi_init.c  MST_DUMPLING.nc  Makevars  Makevars.in  a.out  arpack_eig.f90  check_netcdf_installation.f90  cl.sh  cleaner.sh  compileIT.sh  contract_mst.f90  dist_clusters_utils.f90  file.txt  find_mahalanobis.f90  fprintf_wrapper.c  gen_manycuts.f90  gen_progind.f90  gen_progind_netcdf.f90  ifort_cleaner.sh  m_clustering.f90  m_clustering.mod  m_gen_nbls.f90  m_gen_nbls.mod  m_gutenberg.f90  m_hw_fprintf.f90  m_mst.f90  m_mst.mod  m_mst_dumping.f90  m_mst_dumping.mod  m_mst_netcdf.f90  m_var_nbls_clu.f90  m_var_nbls_clu.mod  m_variables_gen.f90  m_variables_gen.mod  main_clu_adjl_mst.f90  main_clu_adjl_mst_dumping.f90  nbls_clu_gen.f90  optimization_maha_metric.f90  rm_o_mod_so.sh  (+4 more)
tests/: test_all.R  test_feature_selection.R  test_mst.R  test_netcdf_mst_dumping.R  test_profiling.R  test_wgcna.R  test_writing_pdb_sst.R  testthat.R
tests/testthat/: test-maha.R  test-mst.R  test-sst.R  test_adjl_from_adjmat.R  test_basin_optimization.R  test_basin_recognition.R  test_different_mst_constructions.R  test_feature_selectionPCA.R  test_generate_network.R  test_gmrq_kfold.R  test_install_campari.R  test_keyfile_handling.R  test_maha.R  test_msm.R  test_mst.R  test_multiplicate_trj.R  test_nSBR.R  test_netcdf_mst_dumping.R  test_plot_traces.R  test_profiling.R  test_run_campari.R  test_sapphire_plot.R  test_score_sapphire.R  test_show_clustering_summary.R  test_sst.R  test_writing_pdb.R
tools/m4/: ax_arpack.m4  ax_lib_netcdf4.m4
vignettes/: SAPPHIRE_plot.Rmd  feature_selectionPCA.Rmd  index.Rmd  mahalanobis_distance.Rmd  tutorial11.Rmd  working_with_campari.Rmd
vignettes/include/: before_body.html  header.html
(+409 files in other folders)
